# shuttle-cli

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  coverage-unit.ini  pyproject.toml  requirements.txt
.github/workflows/: test.yml
config/: config.yaml  drives.yaml  repositories.yaml
config/ci/: config.yaml  drives.yaml
docs/: README.md  architecture.md  bookmarks.md  configuration.md  docker.md  gh.md  git.md  large-files.md  quick-defaults.md  setup.md  workflows.md
scripts/: bootstrap.sh  install.sh  test-in-docker.sh  test-integration.sh  test-unit.sh
scripts/chrome/: export-bookmarks.sh  export.sh  import-bookmarks.sh  import.sh  wait-download.sh
scripts/docker/: _common.sh  build-image.sh  common.sh  container-delete.sh  image-delete.sh  reset.sh  run-integration.sh  run-unit.sh  stop.sh  (+2 more)
shuttle/: __init__.py  __main__.py  cli.py
tests/: test_bookmark_scripts.py  test_bootstrap_structure.py  test_chrome_commands.py  test_cli_endpoints.py  test_cli_help.py  test_docker_commands.py  test_docker_integration.py  test_docker_integration_checks.py  test_docker_runtime.py  test_gh_commands.py  test_git_commands.py  test_git_mocks.py  test_git_push_shortcut.py  test_git_safety.py  test_git_scripts.py  test_git_ship.py  test_git_shortcuts_service.py  test_git_tag_zip.py  test_git_workflow.py  test_internal_read_write.py  test_links_command.py  test_public_commands_integration.py  test_public_endpoints_integration.py  test_quick_defaults.py  test_stubs_review_main.py  test_unit_coverage.py  test_utils_helpers.py  test_workflow_integration.py
(+160 files in other folders)
